--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.psdimporter": "6.0.7",
     "com.unity.addressables": "1.21.12",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
